# encode-london2024-sentiment-oracle

./: .gitignore  README.md
aivm-sentiment/: _1_run  _2_example
aivm-sentiment/aivm-senti-api/: README.md
aivm-sentiment/aivm-senti-api/aivm_senti_api/: __init__.py  aivm_senti_api.py
aivm-sentiment/aivm-senti-cli/: senti.py
flare-sentiment-oracle/: _0_build  _1_compile  config.py  operator
flare-sentiment-oracle/solc/: Dockerfile
flare-sentiment-oracle/src/: NewsSentimentOracle.sol
rss-data-source/: rss_fetcher.py
sentiment-aivm/: _0_build  _2_example
sentiment-aivm/aivm-senti-api/: Dockerfile  pyproject.toml
sentiment-aivm/aivm-senti-cli/: aivm_sentiment.py
sentiment-news-aggregator/: news_aggregator.py
sentiment-oracle-base/: _1_compile  config.py  operator
sentiment-oracle-base/solc/: Dockerfile
sentiment-oracle-base/src/: NewsSentimentOracle.sol
sentiment-oracle-flare-ftsoV2/: _0_build  config.py  operator
sentiment-oracle-flare-ftsoV2/solc/: entrypoint.sh
sentiment-oracle-flare-ftsoV2/src/: NewsSentimentOracle.sol
sentiment-rss-data-scrapper/: rss_news_fetch.py
