[tool.poetry]
name = "aivm-senti-api"
version = "0.0.1"
description = "AIVM Sentiment API"
authors = ["Antonio Roldao <hackathon@anton.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
nillion-aivm = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aivm-senti-api = "aivm_senti_api:main"
